--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<div id="pagina1">
 		<header>
 			<div class="button" title="Login & Cadastro">
-				<a href="login/logcad.html">LOG | CAD</a>
+				<a href="login/logcad.html"><i class="fas fa-sign-in-alt fa-2x"></i></a>
 			</div>
 
 			<div id="orbit" class="ellipse-container">
@@ -46,6 +46,9 @@
 				<li><a href="#">Contato</a></li>
 			</ul>
 		</nav>
+
+		<img src="img/borda.png" alt="caixa" id="caixa" >
+		<h1 id="textomid">Bem Vindo</h1>
 
 		<div class="Interface">
 			<div id="conteudo-1" class="main-conteudo">
@@ -90,34 +93,27 @@
 	<p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
 </div>
 
-<div id="conteudo-4" class="main-conteudo">
-	<h2>LOJAS</h2>
-</br>
-<div class="fakeimg" style="height:200px;">Imagem</div>
-<p>Some text..</p>
-<p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-<br>
-<h2>TITLE HEADING</h2>
-
-<div class="fakeimg" style="height:200px;">Image</div>
-<p>Some text..</p>
-<p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
 </div>
+
+<div class="contact">
+	
 </div>
 
 <!-- Footer -->
 <div class="footer"> 
-	 
-    <a href="#" id="facebook">Facebook</a>
-    <a href="#" id="twitter">Twitter</a>
-    <a href="#" id="google">Google+</a>
+	<div class="social">
+		<i class="fab fa-4x fa-facebook-square" title="Facebook"></i>
+		<i class="fab fa-4x fa-twitter-square" title="Twitter"></i>
+		<i class="fab fa-4x fa-github-square" title="GitHub"></i>
+		<i class="fab fa-4x fa-google-plus-square" title="Google+"></i>
+	</div>
 
 	<p id="copy">Copyright <i class="far fa-copyright"></i> MyBazz Easy 2018</p> 
 
 </div>
 
 <!-- Back-To-Top Button -->
-<div class='to-top' title="Back Top">
+<div class='to-top' title="Topo">
 	<a class='back-to-top ion-chevron-up' href='#'><i class="fas fa-hand-pointer"></i></a>
 </div>
 
