--- a/passeio.html
+++ b/passeio.html
@@ -8,28 +8,28 @@
 	<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
 	
 	<link rel="stylesheet" href="css/passeio.css">
-    <link rel="stylesheet" href="">
+  <link rel="stylesheet" href="">
 
 
 
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
 
 
-    <title>MyBazz Easy</title>
+  <title>MyBazz Easy</title>
 
 
 
 </head>
 <body>
-    <div id="pagina2">
-        <header>
+  <div id="pagina2">
+    <header>
 
-          <div class="containerslide">
-            <img class='photo' src="img/3.jpg" alt="image1" />
-            <img class='photo' src="img/3.jpg" alt="image2" />
-            <img class='photo' src="img/2.jpg" alt="image3" />
-            <img class='photo' src="img/4.gif" alt="image4" />
-        </div>
+      <div class="containerslide">
+        <img class='photo' src="img/3.jpg" alt="image1" />
+        <img class='photo' src="img/3.jpg" alt="image2" />
+        <img class='photo' src="img/2.jpg" alt="image3" />
+        <img class='photo' src="img/4.gif" alt="image4" />
+      </div>
 
     </header>
 
@@ -39,87 +39,87 @@
         <li><a href="lojas.html">Lojas</a></li>
         <li><a href="passeio.html">Passeio</a></li>
         <li><a href="#">Contato</a></li>
-    </ul>
-</nav>
+      </ul>
+    </nav>
 
-<h1 id="tipo">Portfólio</h1>
+    <img src="img/borda.png" alt="caixa" id="caixa" >
+    <h1 id="textomid">Produtos</h1>
 
-<div class='container'>
+
+    <div class="container">
 
       <div class='example relative'>
-        <div class='item'><img src='img/jaqueta.png' /><div id="text"><h2>Produto</h2><p>descrição</p><div class="button"><a href="#">Link</a></div></div></div>
-       <div class='item'><img src='img/jaquetafem2.png' /><div id="text"><h2>Produto</h2><p>descrição</p><div class="button"><a href="#">Link</a></div></div></div>
-       <div class='item'><img src='img/jaqueta3.png' /><div id="text"><h2>Produto</h2><p>descrição</p><div class="button"><a href="#">Link</a></div></div></div>
+        <div class='item'><img src='img/jaqueta.png' /><div id="text"><h2>Produto</h2><p>descrição</p><div class="button"><a href="#"><i class="fas fa-street-view" title="Fornecedor"></i></a></div></div></div>
+        <div class='item'><img src='img/jaquetafem2.png' /><div id="text"><h2>Produto</h2><p>descrição</p><div class="button"><a href="#"><i class="fas fa-street-view" title="Fornecedor"></i></a></div></div></div>
+        <div class='item'><img src='img/jaqueta3.png' /><div id="text"><h2>Produto</h2><p>descrição</p><div class="button"><a href="#"><i class="fas fa-street-view" title="Fornecedor"></i></a></div></div></div>
       </div>
     </div>
-   <h1 id="tipo">Portfólio</h1>
 
     <div class='container'>
       <div class='example absolute'>
-        <div class='item'><img src='img/sapato.png' /><div id="text"><h2>Produto</h2><p>descrição</p><div class="button"><a href="#">Link</a></div></div></div>
-        <div class='item'><img src='img/sapato2.png' /><div id="text"><h2>Produto</h2><p>descrição</p><div class="button"><a href="#">Link</a></div></div></div>
-         <div class='item'><img src='img/sapato3.png' /><div id="text"><h2>Produto</h2><p>descrição</p><div class="button"><a href="#">Link</a></div></div></div>
+        <div class='item'><img src='img/sapato.png' /><div id="text"><h2>Produto</h2><p>descrição</p><div class="button"><a href="#"><i class="fas fa-street-view" title="Fornecedor"></i></a></div></div></div>
+        <div class='item'><img src='img/sapato2.png' /><div id="text"><h2>Produto</h2><p>descrição</p><div class="button"><a href="#"><i class="fas fa-street-view" title="Fornecedor"></i></a></div></div></div>
+        <div class='item'><img src='img/sapato3.png' /><div id="text"><h2>Produto</h2><p>descrição</p><div class="button"><a href="#"><i class="fas fa-street-view" title="Fornecedor"></i></a></div></div></div>
       </div>
     </div>
-<h1 id="tipo">Portfólio</h1>
 
     <div class='container'>
       <div class='example fixed'>
-        <div class='item'><img src='img/vestido.png' /><div id="text"><h2>Produto</h2><p>descrição</p><div class="button"><a href="#">Link</a></div></div></div>
-        <div class='item'><img src='img/camisa2.png' /><div id="text"><h2>Produto</h2><p>descrição</p><div class="button"><a href="#">Link</a></div></div></div>
-        <div class='item'><img src='img/vestido3.png' /><div id="text"><h2>Produto</h2><p>descrição</p><div class="button"><a href="#">Link</a></div></div></div>
+        <div class='item'><img src='img/vestido.png' /><div id="text"><h2>Produto</h2><p>descrição</p><div class="button"><a href="#"><i class="fas fa-street-view" title="Fornecedor"></i></a></div></div></div>
+        <div class='item'><img src='img/camisa2.png' /><div id="text"><h2>Produto</h2><p>descrição</p><div class="button"><a href="#"><i class="fas fa-street-view" title="Fornecedor"></i></a></div></div></div>
+        <div class='item'><img src='img/vestido3.png' /><div id="text"><h2>Produto</h2><p>descrição</p><div class="button"><a href="#"><i class="fas fa-street-view" title="Fornecedor"></i></a></div></div></div>
       </div>
     </div>
 
-<h1 id="tipo">Portfólio</h1>
 
     <div class='container'>
       <div class='example fixed'>
-        <div class='item'><img src='img/camisa.png' /><div id="text"><h2>Produto</h2><p>descrição</p><div class="button"><a href="#">Link</a></div></div></div>
-        <div class='item'><img src='img/calca2.png' /><div id="text"><h2>Produto</h2><p>descrição</p><div class="button"><a href="#">Link</a></div></div></div>
-        <div class='item'><img src='img/camisa2.png' /><div id="text"><h2>Produto</h2><p>descrição</p><div class="button"><a href="#">Link</a></div></div></div>
+        <div class='item'><img src='img/camisa.png' /><div id="text"><h2>Produto</h2><p>descrição</p><div class="button"><a href="#"><i class="fas fa-street-view" title="Fornecedor"></i></a></div></div></div>
+        <div class='item'><img src='img/calca2.png' /><div id="text"><h2>Produto</h2><p>descrição</p><div class="button"><a href="#"><i class="fas fa-street-view" title="Fornecedor"></i></a></div></div></div>
+        <div class='item'><img src='img/camisa2.png' /><div id="text"><h2>Produto</h2><p>descrição</p><div class="button"><a href="#"><i class="fas fa-street-view" title="Fornecedor"></i></a></div></div></div>
       </div>
     </div>
 
-<h1 id="tipo">Portfólio</h1>
 
     <div class='container'>
       <div class='example fixed'>
-        <div class='item'><img src='img/tenis.png' /><div id="text"><h2>Produto</h2><p>descrição</p><div class="button"><a href="#">Link</a></div></div></div>
-        <div class='item'><img src='img/tenis2.png' /><div id="text"><h2>Produto</h2><p>descrição</p><div class="button"><a href="#">Link</a></div></div></div>
-        <div class='item'><img src='img/tenis3.png' /><div id="text"><h2>Produto</h2><p>descrição</p><div class="button"><a href="#">Link</a></div></div></div>
+        <div class='item'><img src='img/tenis.png' /><div id="text"><h2>Produto</h2><p>descrição</p><div class="button"><a href="#"><i class="fas fa-street-view" title="Fornecedor"></i></a></div></div></div>
+        <div class='item'><img src='img/tenis2.png' /><div id="text"><h2>Produto</h2><p>descrição</p><div class="button"><a href="#"><i class="fas fa-street-view" title="Fornecedor"></i></a></div></div></div>
+        <div class='item'><img src='img/tenis3.png' /><div id="text"><h2>Produto</h2><p>descrição</p><div class="button"><a href="#"><i class="fas fa-street-view" title="Fornecedor"></i></a></div></div></div>
       </div>
     </div>
 
 
-<!-- Footer -->
-<div class="footer"> 
-     
-    <a href="#" id="facebook">Facebook</a>
-    <a href="#" id="twitter">Twitter</a>
-    <a href="#" id="google">Google+</a>
+    <!-- Footer -->
+    <div class="footer"> 
+      <div class="social">
+        <i class="fab fa-4x fa-facebook-square" title="Facebook"></i>
+        <i class="fab fa-4x fa-twitter-square" title="Twitter"></i>
+        <i class="fab fa-4x fa-github-square" title="GitHub"></i>
+       <i class="fab fa-4x fa-google-plus-square" title="Google+"></i>
+      </div>
 
-    <p id="copy">Copyright <i class="far fa-copyright"></i> MyBazz Easy 2018</p> 
+      <p id="copy">Copyright<i class="far fa-copyright"></i>MyBazz Easy 2018</p> 
 
-</div>
+    </div>
 
-<!-- Back-To-Top Button -->
-<div class='to-top' title="Back Top">
-  <a class='back-to-top ion-chevron-up' href='#'><i class="fas fa-hand-pointer"></i></a>
-</div>
+    <!-- Back-To-Top Button -->
+    <div class='to-top' title="Topo">
+      <a class='back-to-top ion-chevron-up' href='#'><i class="fas fa-1x fa-hand-pointer"></i></a>
+    </div>
 
-</div>
-
-
+  </div>
 
 
 
-<!----Slider---->
 
-<!-- Back-To-Top Button -->
-<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
-<script src="js/back.js"></script>
+
+
+  <!-- Back-To-Top Button -->
+  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+
+  <script src="js/back.js"></script>
 
 
 </body>
