--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		<nav class="skew-menu">
 			<ul>
 				<li><a href="index.html">Home</a></li>
-				<li><a href="lojas.html">Lojas</a></li>
+				<!--<li><a href="lojas.html">Lojas</a></li>-->
 				<li><a href="passeio.html">Passeio</a></li>
 				<li><a href="#">Contato</a></li>
 			</ul>
