--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 
 			<div id="orbit" class="ellipse-container">
 
-				<h2 class="greeting">mybazz</h2>
+                <h2 class="greeting">mybazz</h2><br>
+                <h2 class="greeting">Easy</h2>
 
 				<div class="ellipse ellipse__outer--thin">
 
