--- a/login/logcad.html
+++ b/login/logcad.html
@@ -12,7 +12,7 @@
 <body>
 <header id="hdrlogcad">
     <div id="btn-back">
-        <img id="img-btn-back" src="../img/seta-esquerda.png">
+		<a href="../index.html"><img id="img-btn-back" src="../img/seta-esquerda.png"></a>
     </div>
 </header>
 <div id="app" class="base">
@@ -89,11 +89,6 @@
 </div>
 <script src='https://cdn.jsdelivr.net/npm/vue'></script>
 <script  src="js/index.js"></script>
-<script type="text/javascript">
-        document.querySelector('#btn-back').addEventListener('click',function (){
-        window.location.assign("../index.html");
-    })
-</script>
 </body>
 
 </html>
