--- a/passeio.html
+++ b/passeio.html
@@ -27,8 +27,8 @@
     <header>
 
       <div class="containerslide">
-        <img class='photo' src="img/3.jpg" alt="image1" />
-        <img class='photo' src="img/3.jpg" alt="image2" />
+        <img class='photo' src="img/logo.png" alt="image1" />
+        <img class='photo' src="img/logo.png" alt="image2" />
         <img class='photo' src="img/2.jpg" alt="image3" />
         <img class='photo' src="img/4.gif" alt="image4" />
       </div>
