--- a/perfil/perfil.html
+++ b/perfil/perfil.html
@@ -15,19 +15,19 @@
     <div class='page'>
 
       <div class='content'>
-        <img src='bb.jpg' class='article-image'/><h1>Dales Orinando</h1>
+        <img src='bb.jpg' class='article-image'/><h1><i class="fas fa-user-tag" title="Usuário"></i> Dales Orinando</h1>
         
-        <h2 class="title"><i class="far fa-1x fa-address-book"></i> Dados</h2>
-        <p>Empresa ou Local de Trabalho: <br><br>
-          Mora em: <br><br>
-          Detalhes:<br><br>
-          Informações básicas: <br><br></p>
+        <h2 class="title"><i class="fas fa-address-card"></i> Dados</h2>
+        <p>Empresa ou Local de Trabalho: <strong>House Of Code</strong> <br><br>
+          Mora em: <strong>Macapá-AP</strong> <br><br>
+          Detalhes: <strong>Dalesorinando@gmail.com</strong><br><br>
+          Informações básicas: <strong>Programador e Design Web</strong> <br></p>
           <h2 class="title"><i class="fas fa-phone"></i> Contatos</h2>
             <div class="social">
         <i class="fab fa-4x fa-twitter" title="Twitter"></i>
         <i class="fab fa-4x fa-instagram" title="Instagrola"></i>
         <i class="fab fa-4x fa-whatsapp" title="Zap Zap"></i>
-        <i class="fab fa-4x fa-twitch"></i>
+        <i class="fab fa-4x fa-facebook-messenger"></i>
       </div>
 
           </div>
@@ -36,26 +36,22 @@
             <div class='columnpub'>
               <img src='jaqueta.png' class='avatar'/>
               <h3 class='username'>Jaquetinha</h3>
-              <p class='comment'>Comentário: <br>Aptent vel egestas vestibulum aliquam ullamcorper volutpat
-              ullamcorper pharetra hac posuere a rhoncus purus molestie torquent. </p>
+              <p class='comment'>Descrição: <br>Aqui fica a inserção da descrição e comentários prévios sobre o produto. </p>
             </div>
             <div class='columnpub'>
               <img src='sapato.png' class='avatar'/>
               <h3 class='username'>Sapato</h3>
-              <p class='comment'>Comentário: <br>Aptent vel egestas vestibulum aliquam ullamcorper volutpat
-              ullamcorper pharetra hac posuere a rhoncus purus molestie torquent. </p>
+              <p class='comment'>Descrição: <br>Aqui fica a inserção da descrição e comentários prévios sobre o produto. </p>
             </div>
             <div class='columnpub'>
               <img src='vestido.png' class='avatar'/>
               <h3 class='username'>Vestido</h3>
-              <p class='comment'>Comentário: <br>Aptent vel egestas vestibulum aliquam ullamcorper volutpat
-              ullamcorper pharetra hac posuere a rhoncus purus molestie torquent. </p>
+             <p class='comment'>Descrição: <br>Aqui fica a inserção da descrição e comentários prévios sobre o produto. </p>
             </div>
             <div class='columnpub'>
               <img src='camisa.png' class='avatar'/>
               <h3 class='username'>Camisinha</h3>
-              <p class='comment'>Comentário: <br>Aptent vel egestas vestibulum aliquam ullamcorper volutpat
-              ullamcorper pharetra hac posuere a rhoncus purus molestie torquent. </p>
+              <p class='comment'>Descrição: <br>Aqui fica a inserção da descrição e comentários prévios sobre o produto. </p>
             </div>
 
           </div>
@@ -70,11 +66,11 @@
             <div class="col-12 col-carousel">
               <div class="owl-carousel carousel-main">
                 <div><img class='produto' src="calca.png"></div>
-                <div><img class='produto' src="http://via.placeholder.com/350x200/FECA57/FFF.jpg?text=2"></div>
-                <div><img class='produto' src="http://via.placeholder.com/350x200/FECA57/FFF.jpg?text=3"></div>
-                <div><img class='produto' src="http://via.placeholder.com/350x200/FECA57/FFF.jpg?text=4"></div>
-                <div><img class='produto' src="http://via.placeholder.com/350x200/FECA57/FFF.jpg?text=5"></div>
-                <div><img class='produto' src="http://via.placeholder.com/350x200/FECA57/FFF.jpg?text=6"></div>
+                <div><img class='produto' src="jaqueta.png"></div>
+                <div><img class='produto' src="upload.png"></div>
+                 <div><img class='produto' src="upload.png"></div>
+                <div><img class='produto' src="upload.png"></div>
+                 <div><img class='produto' src="upload.png"></div>
               </div>
             </div>
           </div>
