Atualização de Cor!

--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
 	<div id="pagina1">
 		<header>
 			<div class="button" title="Login & Cadastro">
-				<a href="login/logcad.html"><i class="fas fa-sign-in-alt fa-2x"></i></a>
+				<a href="login/cadastrar.php"><i class="fas fa-sign-in-alt fa-2x"></i></a>
 			</div>
 
 			<div id="orbit" class="ellipse-container">
-
+				<!--
                 <h2 class="greeting">mybazz</h2><br>
                 <h2 class="greeting">Easy</h2>
-
+				-->
 				<div class="ellipse ellipse__outer--thin">
 
-					<div class="ellipse ellipse__orbit"></div>
+                    <div class="ellipse ellipse__orbit"></div>
 
 				</div>
 
