--- a/passeio.html
+++ b/passeio.html
@@ -8,11 +8,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.css">
 
 	<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
-	
-	<link rel="stylesheet" href="css/passeio.css">
-  <link rel="stylesheet" href="">
 
-
+    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="css/passeio.css">
 
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
 
@@ -41,7 +39,7 @@
         <li><a href="index.html">Home</a></li>
         <!--<li><a href="lojas.html">Lojas</a></li>-->
         <li><a href="passeio.html">Passeio</a></li>
-        <li><a href="#">Contato</a></li>
+        <li><a href="contato.html">Contato</a></li>
       </ul>
     </nav>
 
