--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 	<link rel="stylesheet" type="text/css" href="css/estilo.css"> <!-- Gem style -->
 	<link rel="stylesheet" type="text/css" href="css/orbita.css">
 
+	 <link rel="stylesheet" href="css/main.css">
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Exo+2">
+
 	
 
 	<title>MyBazz Easy</title>
@@ -24,10 +27,7 @@
 			</div>
 
 			<div id="orbit" class="ellipse-container">
-				<!--
-                <h2 class="greeting">mybazz</h2><br>
-                <h2 class="greeting">Easy</h2>
-				-->
+				
 				<div class="ellipse ellipse__outer--thin">
 
                     <div class="ellipse ellipse__orbit"></div>
@@ -48,56 +48,83 @@
 			</ul>
 		</nav>
 
-		<img src="img/borda.png" alt="caixa" id="caixa" >
-		<h1 id="textomid">Bem Vindo</h1>
+
 
 		<div class="Interface">
 			<div id="conteudo-1" class="main-conteudo">
-				<h2>INTRO</h2>
-			</br>
-			<div class="fakeimg" style="height:200px;">Imagem</div>
-			<p>Some text..</p>
-			<p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-			<br>
-			<h2>TITLE HEADING</h2>
+				<img src="img/borda.png" alt="caixa" id="caixa" >
+				<h1 id="textomid">Bem Vindo</h1>
+			<br><br>
+			
 
-			<div class="fakeimg" style="height:200px;">Image</div>
-			<p>Some text..</p>
-			<p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-		</div>
+		<section class="top-container">
+            <div class="backimage">
+            </div>
+            <div class="program-lang first">
+               <h4>Design</h4>
+               <p class="lang-name">Html5 / CSS3</p>
+               <a href="" class="btn">Ler mais...</a>
+            </div>
+            <div class="program-lang second">
+               <h4>Responsive</h4>
+               <p class="lang-name">CSS Grid / Flexbox</p>
+               <a href="" class="btn">Ler mais...</a>
+            </div>
+            <div class="program-lang third">
+               <h4>Script</h4>
+               <p class="lang-name"> Js / jQuery</p>
+               <a href="" class="btn">Ler mais...</a>
+            </div>
+         </section>
 
-		<div id="conteudo-2" class="main-conteudo">
-			<h2>PRODUTOS</h2>
-		</br>
-		<div class="fakeimg" style="height:200px;">Imagem</div>
-		<p>Some text..</p>
-		<p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-		<br>
-		<h2>TITLE HEADING</h2>
+	<!-- Boxes Section -->
+         <section class="skills">
+            <div class="skill">
+               <i class="fas fa-chart-pie fa-4x"></i>
+               <h3>Management</h3>
+               <p>I usually keen to develop my small businesses to achieve its objectives through planning, organizing, influencing and controlling. Also by working with people and through them</p>
+            </div>
+            <div class="skill">
+               <i class="fas fa-globe fa-4x"></i>
+               <h3>Inbound Marketing</h3>
+               <p>I started learning inbound marketing 2 years ago. I focused on attracting customers through relevant and helpful content and adding value at every stage in my customer's buying journey</p>
+            </div>
+            <div class="skill">
+               <i class="fas fa-cog fa-4x"></i>
+               <h3>Design</h3>
+               <p>I already designed three websites by using languages such as Html5, CSS3, Javascript, jQuery and frameworks such as CSS grid and flexbox</p>
+            </div>
+            <div class="skill">
+               <i class="fas fa-users fa-4x"></i>
+               <h3>Content Marketing</h3>
+               <p>I worked as a creative content writer for one year. I focused on creating valuable, relevant, and consistent content to attract a clearly defined audience to drive customers in a profitable way</p>
+            </div>
+         </section>
+         <!-- Info Section -->
+         <section class="vision">
+            <img width="500px" src="https://s20.postimg.cc/mm5gamhq5/business.jpg" alt="">
+            <div>
+               <h2>About Us</h2>
+               <p>Site e-commerce cuja a finalidade é disponibilizar um espaço comercial eletrônico para pessoas com baixa ou nenhuma renda, micro e pequenas empresas. O sv (shopping virtual) tem por finalidade oferecer ao usuário uma plataforma auto explicativa lhe dando a oportunidade de anunciar o seu produto ou sua empresa com meios de publicações ou lojas pré-prontas de acordo com o tipo de produto que será exposto à venda. Utilizamos o método de pesquisa de campo para a coleta de dados a fim de chegar a uma solução plausível para as dificuldades do público alvo e também o método qualitativo para a construção da aplicação Web, será mostrado também ao decorrer do artigo de forma objetiva e conclusiva as qualidades do mesmo.</p>
+              
+            </div>
+         </section>
+         <!-- Portfolio -->
+         <h1 class="port" align="center">Portfólio</h1>
+         <section class="gallery">
+            <img src="https://s20.postimg.cc/djlkha9wt/image.jpg" alt="">
+            <img src="https://s20.postimg.cc/elvqzzdcd/image.jpg" alt="">
+            <img src="https://s20.postimg.cc/b3jr34ubh/image.jpg" alt="">
+            <img src="https://s20.postimg.cc/v8hwmqb2l/image.jpg" alt="">
+            <img src="https://s20.postimg.cc/xptnu0i4d/image.jpg" alt="">
+            <img src="https://s20.postimg.cc/lny9zv165/image.jpg" alt="">
+            <img src="https://s20.postimg.cc/506rxcyot/image.jpg" alt="">
+            <img src="https://s20.postimg.cc/vy0oz33wd/image.jpg" alt="">
+            <img src="https://s20.postimg.cc/cg61j31st/image.jpg" alt="">
+            <img src="https://s20.postimg.cc/3l578nkr1/010.jpg" alt="">
+         </section>
 
-		<div class="fakeimg" style="height:200px;">Image</div>
-		<p>Some text..</p>
-		<p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-	</div>
-
-	<div id="conteudo-3" class="main-conteudo">
-		<h2>LOJAS</h2>
-	</br>
-	<div class="fakeimg" style="height:200px;">Imagem</div>
-	<p>Some text..</p>
-	<p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-	<br>
-	<h2>TITLE HEADING</h2>
-
-	<div class="fakeimg" style="height:200px;">Image</div>
-	<p>Some text..</p>
-	<p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
 </div>
-
-</div>
-
-<div class="contact">
-	
 </div>
 
 <!-- Footer -->
@@ -118,13 +145,16 @@
 	<a class='back-to-top ion-chevron-up' href='#'><i class="fas fa-hand-pointer"></i></a>
 </div>
 
-</div>
+
 
 
 <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
 <script src="js/back.js"></script>
 
+<!-- Wrapper Ends -->
+      <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/solid.js" integrity="sha384-+Ga2s7YBbhOD6nie0DzrZpJes+b2K1xkpKxTFFcx59QmVPaSA8c7pycsNaFwUK6l" crossorigin="anonymous"></script>
+      <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js" integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c" crossorigin="anonymous"></script>   
 
 </body>
 </html>
