--- a/perfil/perfil.html
+++ b/perfil/perfil.html
@@ -2,9 +2,9 @@
 <html lang='pt-br'>
 <head>
   <meta charset='UTF-8' />
-  <title>Perfil</title>
+  <title>MyBazz Easy</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  
+  <link rel="shortcut icon 2x" type="image/x-png" href="../img/loja.png">
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.min.css'>
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.1/assets/owl.carousel.css'>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
@@ -15,14 +15,19 @@
     <div class='page'>
 
       <div class='content'>
-        <img src='bb.jpg' class='article-image'/><h1><i class="fas fa-user-tag" title="Usuário"></i> Dales Orinando</h1>
-        
+        <img src='../img/user.png' class='article-image'/><h1><i class="fas fa-user-tag" title="Usuário"></i> Fulano Souza Santos</h1>
+    
         <h2 class="title"><i class="fas fa-address-card"></i> Dados</h2>
-        <p>Empresa ou Local de Trabalho: <strong>House Of Code</strong> <br><br>
-          Mora em: <strong>Macapá-AP</strong> <br><br>
-          Detalhes: <strong>Dalesorinando@gmail.com</strong><br><br>
-          Informações básicas: <strong>Programador e Design Web</strong> <br></p>
+        <div class="dados">
+          <h4>Título:</h4>
+          <p>House of code</p>
+          <h4>Local:</h4>
+          <p>Macapá-AP</p>
+          <h4>Informações:</h4>
+          <p>Programador e Design Web</p>
+          </div>
           <h2 class="title"><i class="fas fa-phone"></i> Contatos</h2>
+
             <div class="social">
         <i class="fab fa-4x fa-twitter" title="Twitter"></i>
         <i class="fab fa-4x fa-instagram" title="Instagrola"></i>
@@ -34,22 +39,22 @@
           <div class='content2'>
             <h2 class="title2"><i class="fas fa-tshirt"></i> Publicações</h2>
             <div class='columnpub'>
-              <img src='jaqueta.png' class='avatar'/>
+              <img src='../img/jaqueta.png' class='avatar'/>
               <h3 class='username'>Jaquetinha</h3>
               <p class='comment'>Descrição: <br>Aqui fica a inserção da descrição e comentários prévios sobre o produto. </p>
             </div>
             <div class='columnpub'>
-              <img src='sapato.png' class='avatar'/>
+              <img src='../img/sapato.png' class='avatar'/>
               <h3 class='username'>Sapato</h3>
               <p class='comment'>Descrição: <br>Aqui fica a inserção da descrição e comentários prévios sobre o produto. </p>
             </div>
             <div class='columnpub'>
-              <img src='vestido.png' class='avatar'/>
+              <img src='../img/vestido.png' class='avatar'/>
               <h3 class='username'>Vestido</h3>
              <p class='comment'>Descrição: <br>Aqui fica a inserção da descrição e comentários prévios sobre o produto. </p>
             </div>
             <div class='columnpub'>
-              <img src='camisa.png' class='avatar'/>
+              <img src='../img/camisa.png' class='avatar'/>
               <h3 class='username'>Camisinha</h3>
               <p class='comment'>Descrição: <br>Aqui fica a inserção da descrição e comentários prévios sobre o produto. </p>
             </div>
@@ -65,8 +70,8 @@
             <div class="buttonprod" title="Adicionar produto"><a href="#"><i class="fas fa-3x fa-plus"></i></a></div>
             <div class="col-12 col-carousel">
               <div class="owl-carousel carousel-main">
-                <div><img class='produto' src="calca.png"></div>
-                <div><img class='produto' src="jaqueta.png"></div>
+                <div><img class='produto' src="../img/calca.png"></div>
+                <div><img class='produto' src="../img/jaqueta.png"></div>
                 <div><img class='produto' src="upload.png"></div>
                  <div><img class='produto' src="upload.png"></div>
                 <div><img class='produto' src="upload.png"></div>
