--- a/contato.html
+++ b/contato.html
@@ -9,12 +9,17 @@ session_start();
 
 <head>
     <meta charset="UTF-8">
+    <link rel="shortcut icon 2x" type="image/x-png" href="img/loja.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>MyBazz Easy</title>
     <link rel="stylesheet" href="login/css/estilo.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
 </head>
 
 <body>
+<div class="buttonback" title="Voltar">
+	<a href="index.html"><i class="fas fa-2x fa-sign-out-alt"></i></a>
+</div>
 <header class='speaker-form-header'>
     <h1 id="h1-contato">Contato</h1>
     <p id="p-frase"><em><strong id="aspa-frase">"</strong> Saber o que você pensa hoje, é o caminho para melhorar o seu Amanhã!</em></p>
@@ -41,6 +46,9 @@ session_start();
                     <label for="info">Como podemos lhe ajudar Hoje?</label>
                     <textarea id="info" class="texta-info"></textarea>
                 </div>
+                
+                <img src='img/contato.gif' class='article-image'/>
+                <br>
                 <input class="btn-info" type="submit" name=" btnLogin" value="ENVIAR">
                 <a class="cad" href="index.html#rodape">Outros meios de Contato<strong> Mande seu feedback!</strong></a>
             </form>
