--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
 	<link rel="shortcut icon 2x" type="image/x-png" href="img/loja.png">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
-
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.0/css/all.css">
 	<link rel="stylesheet" type="text/css" href="css/estilo.css"> <!-- Gem style -->
 	<link rel="stylesheet" type="text/css" href="css/orbita.css">
 
-	 <link rel="stylesheet" href="css/main.css">
-      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Exo+2">
+ <link rel="stylesheet" href="css/main.css">
+ <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Exo+2">
 
 	
 
@@ -25,6 +24,9 @@
 			<div class="button" title="Login & Cadastro">
 				<a href="login/cadastrar.php"><i class="fas fa-sign-in-alt fa-2x"></i></a>
 			</div>
+         <div class="buttonperfil" title="Perfil">
+            <a href="perfil/perfil.html"><i class="fas fa-user-circle fa-2x"></i></a>
+         </div>
 
 			<div id="orbit" class="ellipse-container">
 				
@@ -63,17 +65,17 @@
             <div class="program-lang first">
                <h4>Design</h4>
                <p class="lang-name">Html5 / CSS3</p>
-               <a href="" class="btn">Ler mais...</a>
+               <a href="https://internetingishard.com/html-and-css/" target="_blank" class="btn">Leia sobre...</a>
             </div>
             <div class="program-lang second">
                <h4>Responsive</h4>
                <p class="lang-name">CSS Grid / Flexbox</p>
-               <a href="" class="btn">Ler mais...</a>
+               <a href="https://internetingishard.com/html-and-css/" target="_blank" class="btn">Leia sobre...</a>
             </div>
             <div class="program-lang third">
                <h4>Script</h4>
                <p class="lang-name"> Js / jQuery</p>
-               <a href="" class="btn">Ler mais...</a>
+               <a href="https://internetingishard.com/html-and-css/" target="_blank" class="btn">Leia sobre...</a>
             </div>
          </section>
 
@@ -102,7 +104,7 @@
          </section>
          <!-- Info Section -->
          <section class="vision">
-            <img width="500px" src="https://s20.postimg.cc/mm5gamhq5/business.jpg" alt="">
+            <img width="500px" src="img/business.jpg" alt="">
             <div>
                <h2>About Us</h2>
                <p>Site e-commerce cuja a finalidade é disponibilizar um espaço comercial eletrônico para pessoas com baixa ou nenhuma renda, micro e pequenas empresas. O sv (shopping virtual) tem por finalidade oferecer ao usuário uma plataforma auto explicativa lhe dando a oportunidade de anunciar o seu produto ou sua empresa com meios de publicações ou lojas pré-prontas de acordo com o tipo de produto que será exposto à venda. Utilizamos o método de pesquisa de campo para a coleta de dados a fim de chegar a uma solução plausível para as dificuldades do público alvo e também o método qualitativo para a construção da aplicação Web, será mostrado também ao decorrer do artigo de forma objetiva e conclusiva as qualidades do mesmo.</p>
@@ -112,16 +114,16 @@
          <!-- Portfolio -->
          <h1 class="port" align="center">Portfólio</h1>
          <section class="gallery">
-            <img src="https://s20.postimg.cc/djlkha9wt/image.jpg" alt="">
-            <img src="https://s20.postimg.cc/elvqzzdcd/image.jpg" alt="">
-            <img src="https://s20.postimg.cc/b3jr34ubh/image.jpg" alt="">
-            <img src="https://s20.postimg.cc/v8hwmqb2l/image.jpg" alt="">
-            <img src="https://s20.postimg.cc/xptnu0i4d/image.jpg" alt="">
-            <img src="https://s20.postimg.cc/lny9zv165/image.jpg" alt="">
-            <img src="https://s20.postimg.cc/506rxcyot/image.jpg" alt="">
-            <img src="https://s20.postimg.cc/vy0oz33wd/image.jpg" alt="">
-            <img src="https://s20.postimg.cc/cg61j31st/image.jpg" alt="">
-            <img src="https://s20.postimg.cc/3l578nkr1/010.jpg" alt="">
+            <img src="img/image1.jpg" alt="">
+            <img src="img/image2.jpg" alt="">
+            <img src="img/image3.jpg" alt="">
+            <img src="img/image4.jpg" alt="">
+            <img src="img/image5.jpg" alt="">
+            <img src="img/image6.jpg" alt="">
+            <img src="img/image7.jpg" alt="">
+            <img src="img/image8.jpg" alt="">
+            <img src="img/image9.jpg" alt="">
+            <img src="img/image10.jpg" alt="">
          </section>
 
 </div>
@@ -153,8 +155,7 @@
 <script src="js/back.js"></script>
 
 <!-- Wrapper Ends -->
-      <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/solid.js" integrity="sha384-+Ga2s7YBbhOD6nie0DzrZpJes+b2K1xkpKxTFFcx59QmVPaSA8c7pycsNaFwUK6l" crossorigin="anonymous"></script>
-      <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js" integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c" crossorigin="anonymous"></script>   
+     
 
 </body>
 </html>
