--- a/perfil/perfil.html
+++ b/perfil/perfil.html
@@ -77,7 +77,7 @@
           <div class="owl-carousel carousel-main">
             <div><img class='produto' src="../img/calca.png"></div>
             <div><img class='produto' src="../img/jaqueta.png"></div>
-            <div><img class='produto' src="upload.png"></div>
+            <div><img class='produto' src="../img/lojas.png"></div>
             <div><img class='produto' src="upload.png"></div>
             <div><img class='produto' src="upload.png"></div>
             <div><img class='produto' src="upload.png"></div>
